// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component circular mode and smooth mode set correctly 1`] = `
<path
  class="link"
  d="M3.4202014332566884,-9.396926207859083C11.970705016398409,-32.88924172750679,22.49756633902888,-26.81155550916423,38.56725658119236,-45.96266658713868"
  fill="none"
  stroke="black"
  stroke-dasharray=""
  stroke-width="0.3"
>
  <animate
    attributeName="stroke-width"
    attributeType="XML"
    begin="0s"
    dur="2s"
    from="0"
    to="0.3"
  />
</path>
`;

exports[`Link component circular mode set correctly 1`] = `
<path
  class="link"
  d="M3.4202014332566884,-9.396926207859083 A10,10 0 0,1 6.427876096865393,-7.66044443118978L38.56725658119236,-45.96266658713868"
  fill="none"
  stroke="black"
  stroke-dasharray=""
  stroke-width="0.3"
>
  <animate
    attributeName="stroke-width"
    attributeType="XML"
    begin="0s"
    dur="2s"
    from="0"
    to="0.3"
  />
</path>
`;

exports[`Link component color set correctly 1`] = `
<path
  class="link"
  d="M10,20 10,40 60,40"
  fill="none"
  stroke="red"
  stroke-dasharray=""
  stroke-width="0.3"
>
  <animate
    attributeName="stroke-width"
    attributeType="XML"
    begin="0s"
    dur="2s"
    from="0"
    to="0.3"
  />
</path>
`;

exports[`Link component dashed mode set correctly 1`] = `
<path
  class="link"
  d="M10,20 10,40 60,40"
  fill="none"
  stroke="black"
  stroke-dasharray="1.5,1.5"
  stroke-width="0.3"
>
  <animate
    attributeName="stroke-width"
    attributeType="XML"
    begin="0s"
    dur="2s"
    from="0"
    to="0.3"
  />
</path>
`;

exports[`Link component default link renders correctly 1`] = `
<path
  class="link"
  d="M10,20 10,40 60,40"
  fill="none"
  stroke="black"
  stroke-dasharray=""
  stroke-width="0.3"
>
  <animate
    attributeName="stroke-width"
    attributeType="XML"
    begin="0s"
    dur="2s"
    from="0"
    to="0.3"
  />
</path>
`;

exports[`Link component smooth mode set correctly 1`] = `
<path
  class="link"
  d="M10,20C35,20,35,40,60,40"
  fill="none"
  stroke="black"
  stroke-dasharray=""
  stroke-width="0.3"
>
  <animate
    attributeName="stroke-width"
    attributeType="XML"
    begin="0s"
    dur="2s"
    from="0"
    to="0.3"
  />
</path>
`;

exports[`Link component source set correctly 1`] = `
<path
  class="link"
  d="M1,2 1,40 60,40"
  fill="none"
  stroke="black"
  stroke-dasharray=""
  stroke-width="0.3"
>
  <animate
    attributeName="stroke-width"
    attributeType="XML"
    begin="0s"
    dur="2s"
    from="0"
    to="0.3"
  />
</path>
`;

exports[`Link component target set correctly 1`] = `
<path
  class="link"
  d="M10,20 10,4 6,4"
  fill="none"
  stroke="black"
  stroke-dasharray=""
  stroke-width="0.3"
>
  <animate
    attributeName="stroke-width"
    attributeType="XML"
    begin="0s"
    dur="2s"
    from="0"
    to="0.3"
  />
</path>
`;

exports[`Link component width set correctly 1`] = `
<path
  class="link"
  d="M10,20 10,40 60,40"
  fill="none"
  stroke="black"
  stroke-dasharray=""
  stroke-width="1"
>
  <animate
    attributeName="stroke-width"
    attributeType="XML"
    begin="0s"
    dur="2s"
    from="0"
    to="1"
  />
</path>
`;
